--- a/script/build
+++ b/script/build
@@ -3,9 +3,9 @@
 set -e
 
 case $1 in
-"workspace") docker-compose build "workspace" ;;
-"dev") docker-compose build "dev" ;;
-"prod") docker-compose build "prod" ;;
-"load-balancer") docker-compose build "load-balancer" ;;
-*) docker-compose build ;;
+"workspace") docker-compose build --force-rm "workspace" ;;
+"dev") docker-compose build --force-rm "dev" ;;
+"prod") docker-compose build --force-rm "prod" ;;
+"load-balancer") docker-compose build --force-rm "load-balancer" ;;
+*) docker-compose build --force-rm ;;
 esac
