Add support for prometheus

--- a/.example.env
+++ b/.example.env
@@ -9,6 +9,10 @@ REPLACE_OS_VARS=true
 OTP_COOKIE=otp_cookie_here
 APPLICATION_NAME=hivee_http_starter
 
+# Prometheus
+PROMETHEUS_AUTH_USERNAME=prometheus
+PROMETHEUS_AUTH_PASSWORD=prometheus
+
 # Sentry
 SENTRY_DSN=
 SENTRY_RELEASE=
