--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,23 @@
 # Docker compose
 COMPOSE_PROJECT_NAME=hivee-http-starter
+
+# General
+HOST=0.0.0.0
+PORT=4000
+
+# Environment
+MIX_ENV=dev
+LOG_LEVEL=debug
+REPLACE_OS_VARS=true
+OTP_COOKIE=otp_cookie
+APPLICATION_NAME=hivee_http_starter
+
+# Prometheus
+PROMETHEUS_AUTH_USERNAME=prometheus
+PROMETHEUS_AUTH_PASSWORD=prometheus
+
+# Sentry
+SENTRY_DSN=
+SENTRY_RELEASE=
+SENTRY_LOG_LEVEL=debug
+SENTRY_SERVER_NAME=${APPLICATION_NAME}
