--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     command: sleep infinity
     stop_signal: SIGTERM
     env_file:
-      - .dev.env
+      - .env
     volumes:
       - .:/workspace
       - ~/.ssh:/root/.ssh
@@ -20,9 +20,9 @@ services:
     command: script/start-dev
     stop_signal: SIGTERM
     ports:
-      - "4000"
+      - "4000:4000"
     env_file:
-      - .dev.env
+      - .env
     volumes:
       - ./config:/opt/app/config
       - ./lib:/opt/app/lib
@@ -36,15 +36,13 @@ services:
     command: script/start-prod
     stop_signal: SIGTERM
     ports:
-      - "5000"
+      - "5000:5000"
+    environment:
+      PORT: "5000"
+      MIX_ENV: prod
+      LOG_LEVEL: info
+      SENTRY_LOG_LEVEL: info
     env_file:
-      - .prod.env
-  load-balancer:
-    image: nginx:stable-alpine
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    ports:
-     - "4000:4000"
-     - "5000:5000"
+      - .env
 volumes:
   vscode-server-volume:
